@@ -1,6 +1,6 @@
 bin_PROGRAMS=gtktwitter
 gtktwitter_SOURCES=gtktwitter.c
-AM_CPPFLAGS=-DDATADIR=\"$(pkgdatadir)\" -DLOCALEDIR=\"$(datadir)/locale\"
+AM_CPPFLAGS=-DDATA_DIR=\"$(pkgdatadir)\" -DLOCALE_DIR=\"$(datadir)/locale\"
 INCLUDES=${GTK_CFLAGS}
 gtktwitter_LDADD=${GTK_LIBS}
 dist_pkgdata_DATA=data/loading.gif data/twitter.png data/reload.png data/post.png data/logo.png
