@@ -2,6 +2,7 @@
 	supported ETag and If-Modified-Since.
 	make tiny url with tinyurl.com.
 	add timer for reload.
+	make be possible to browse friends timeline.
 * version 0.0.4
 	anchor for URL links.
 	anchor for @ mark.
